# ViewPilot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  test_sync.py
backend/alembic/: env.py
backend/alembic/versions/: 40ffc9b22f66_initial_schema.py  b3c8d1e2f4a5_add_revenue_columns.py  d5e8f2a3b9c1_add_video_comments.py  e7a1c3d4f2b8_add_channel_daily_stats.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py  auth.py  autopsy.py  channels.py  charts.py  videos.py
backend/app/graphql/: schema.py  types.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  alerts.py  channels.py  ml.py  stats.py  users.py  videos.py
backend/app/services/: auth.py  sync.py  youtube.py
backend/app/utils/: dependencies.py  security.py  youtube_parser.py
docs/: architecture.md
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/assets/css/: main.css
frontend/composables/: useApi.ts  useAuth.ts  useRevenue.ts
frontend/middleware/: auth.ts
frontend/pages/: autopsy.vue  charts.vue  dashboard.vue  index.vue
frontend/pages/video/: [id].vue
frontend/plugins/: apexcharts.client.ts  revenue.client.ts
