[project]
name = "viewpilot"
version = "0.1.0"
description = "YouTube Creator Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Settings
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Auth / HTTP
    "authlib>=1.3.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    # Google APIs
    "google-api-python-client>=2.154.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.250.0",
    # ML / AI
    "sentence-transformers>=3.3.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    # Cache
    "redis[hiredis]>=5.2.0",
    # Background jobs
    "apscheduler>=3.10.0",
    # Security
    "cryptography>=44.0.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
